Fixes typeahead result icons not showing (#446)

--- a/frontend/amundsen_application/static/js/components/common/SearchBar/InlineSearchResults/styles.scss
+++ b/frontend/amundsen_application/static/js/components/common/SearchBar/InlineSearchResults/styles.scss
@@ -71,7 +71,7 @@
           text-decoration: none;
 
           img.icon.icon-search,
-          img.icon.result-icon,
+          span.icon.result-icon,
           .sb-avatar {
             margin: auto 8px auto 0px;
           }
